Switched to 4.0 RC1.